--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
 
 h1 {
   padding: auto;
-
   font-weight: normal;
   text-align: center;
   font-size: 5rem;
@@ -21,7 +20,14 @@ h1 {
   display: flex;
   flex-wrap: wrap;
 }
-
+h2 {
+  padding: auto;
+  font-weight: normal;
+  text-align: center;
+  font-size: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+}
 .countdown-timer {
   display: flex;
   flex-wrap: wrap;
