--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   background-size: cover;
   background-position: center center;
   color: rgb(202, 135, 34);
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,8 +48,71 @@ h2 {
   font-weight: bold;
 }
 
-@media only screen and (min-height: 600px) and (max-height: 650px) {
+/* @media only screen and (min-height: 600px) and (max-height: 650px) {
   h1 {
     font-size: 2rem;
+  }
+  .big-text {
+    font-size: 2rem;
+  }
+  .countdown-element {
+    font-size: 1rem;
+  }
+} */
+@media only screen and (max-width: 280px) {
+  h1 {
+    font-size: 1rem;
+  }
+  .big-text {
+    font-size: 0.75rem;
+  }
+  .countdown-element {
+    font-size: 1.5rem;
+  }
+}
+@media only screen and (min-width: 279px) and (max-width: 319px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .big-text {
+    font-size: 2rem;
+  }
+  .countdown-element {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 539px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .big-text {
+    font-size: 2rem;
+  }
+  .countdown-element {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 540px) and (max-width: 549px) {
+  h1 {
+    font-size: 2rem;
+  }
+  .big-text {
+    font-size: 2rem;
+  }
+  .countdown-element {
+    font-size: 2rem;
+  }
+}
+@media only screen and (min-width: 550px) {
+  h1 {
+    font-size: 6rem;
+  }
+  .big-text {
+    font-size: 6rem;
+  }
+  .countdown-element {
+    font-size: 6rem;
   }
 }
